# pinch

./: Cargo.toml  README.md  deviceinfo
lua/: init.env.lua  init.lua  splash.lua
luau/: splash.luau
src/: deviceinfo.rs  kernel.rs  lib.rs  main.rs  uevent.rs
