[package]
name = "pinch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = [] }
glob = "0.3.1"
gpt = "3.1.0"
mlua = { version = "0.9.6", features = ["lua54", "vendored"] }
sys-mount = "3.0.1"
udev = "0.8.0"
xshell = "0.2.5"

[profile.release]
strip = true # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
